--- a/web/homes/homeDoctor.xhtml
+++ b/web/homes/homeDoctor.xhtml
@@ -130,16 +130,14 @@
                         <img src="../resources/assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box"/>
                     </figure>
                     <li style="color:#fff; cursor:default;">
-                        <span class="all-tittles">#{controlador.usu.nombre} #{controlador.usu.apellido}</span>
+                         <span class="all-tittles"> #{controlador.usu.nombre} #{controlador.usu.apellido} </span>
                     </li>
-                    <li  class="tooltips-general exit-system-button" data-href="../index.xhtml" data-placement="bottom" title="Salir del sistema">
+                    <li  class="tooltips-general exit-system-button" data-href="../faces/index.xhtml" data-placement="bottom" title="Salir del sistema">
                         <i class="zmdi zmdi-power"></i>
                     </li>
-
                     <li  class="tooltips-general search-persona-button" data-placement="bottom" title="Ayuda">
                         <i class="zmdi zmdi-help-outline zmdi-hc-fw"></i>
                     </li>
-
                     <li class="mobile-menu-button visible-xs" style="float: left !important;">
                         <i class="zmdi zmdi-menu"></i>
                     </li>
@@ -233,12 +231,12 @@
                     </a>
                 </article>
 
-                <!--                <article class="tile">
-                                    <a href="../Doctor/BuscarCita.xhtml">
-                                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/calendar.png" width="60" height="60"></img></i></div>
-                                        <div class="tile-num full-reset">Buscar Citas</div>
-                                    </a>
-                                </article>-->
+                <article class="tile">
+                    <a href="../Doctor/BuscarCita.xhtml">
+                        <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/calendar.png" width="60" height="60"></img></i></div>
+                        <div class="tile-num full-reset">Buscar Citas</div>
+                    </a>
+                </article>
 
             </section>
 
