Agregada parte de la funcionalidad de la Secretaria

--- a/web/homes/homeSecretaria.xhtml
+++ b/web/homes/homeSecretaria.xhtml
@@ -143,20 +143,23 @@
 
             <section class="full-reset text-center" style="padding: 40px 0;">
                 <article class="tile">
-                    <a href="../Secretaria/Paciente.xhtml">
-                        <div class="tile-name all-tittles" >Mantenimiento Paciente</div>
-                        <img src="../resources/imgs/Secretaria/personas1.png"  class="img-responsive img-circle center-box"/>
+                    <a href="../Secretaria/Calendario.xhtml">
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Secretaria/calendar.png" width="50" height="50"></img></i></div>
+                        <div class="tile-num full-reset">Citas</div>
                     </a>
                 </article>
 
-
+                <article class="tile">
+                    <a href="../Secretaria/Paciente.xhtml">
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Secretaria/personas1.png" width="50" height="50"></img></i></div>
+                        <div class="tile-num full-reset">Nuevo Paciente</div>
+                    </a>
+                </article>
 
                 <article class="tile">
                     <a href="Turno.xhtml">
-                        <div class="tile-name all-tittles">Empleados</div>
-                        <img src="../resources/imgs/Secretaria/Empleados.png"  class="img-responsive img-circle center-box"/>
-
-
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Secretaria/Empleados.png" width="50" height="50"></img></i></div>
+                        <div class="tile-num full-reset">Empleados</div>
                     </a>
                 </article>
             </section>
